--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <h2>Product Picker</h2>
-      <section>
+      <section class="products">
         <img />
         <img />
         <img />
